@@ -3,8 +3,6 @@
   to make it smaller. Only the linuxrc uses it, so it doesn't really
   matter. This could save up to 200k on the boot floppy. But first someone
   needs to add code to install uclibc or a uclibc udeb.
-* Find something to do with spare space on the bootfloppy; put udebs there
-  for extra drivers or something.
 * The apt download fails if the dpkg status file of the build system is
   in an inconsistent state. It could be overridden to use another status
   file, but that file would have to claim that all dependancies of the
