@@ -58,6 +58,7 @@ BOOT = $(SOME_DEST)/$(EXTRANAME)boot.img$(GZIPPED)
 ROOT = $(SOME_DEST)/$(EXTRANAME)root.img$(GZIPPED)
 EXTRA = $(SOME_DEST)/$(EXTRANAME).img$(GZIPPED)
 MINIISO = $(SOME_DEST)/$(EXTRANAME)mini.iso
+DEBIAN_CD_INFO = $(SOME_DEST)/$(EXTRANAME)debian-cd_info.tar.gz
 
 # some intersting files in tmp/ we may need
 TEMP_INITRD = $(TEMP)/initrd.gz
@@ -66,8 +67,9 @@ TEMP_BOOT = $(TEMP)/boot.img
 TEMP_ROOT = $(TEMP)/root.img
 TEMP_MINIISO = $(TEMP)/mini.iso
 TEMP_EXTRA = $(TEMP)/$(EXTRANAME).img
+TEMP_DEBIAN_CD_INFO = $(TEMP)/debian_cd_info
 
-# Used for building cd images, for eg, powerpc.
+# Used for building cd images.
 CD_IMAGE_TREE = $(TEMP)/cd_image_tree
 
 DPKGDIR = $(TREE)/var/lib/dpkg
